<resources>
    <string name="app_name">Calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="num_1">Num 1</string>
    <string name="num_2">Num 2</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="division_button">/</string>
    <string name="multi_button">x</string>
    <string name="result_button">Button</string>
    <string name="result">result</string>

</resources>